--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,16 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
     steps:
-      - checkout
+      - checkout #Circle CI
       - run:
           name: The First Step
           command: gradle test
-      - store_test_results:
+      - run:
+          name: The second step
+          command: gradle jar
+      - store_artifacts:
+          path: build/libs
+          destination: prefix
+      - store_test_results: #Circle CI
           path: build/test-results
+      
