--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - checkout
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
      # build the application image
-      - run: docker build -t $DOCKER_USER/myapp:$CIRCLE_SHA1 .
+      - run: docker build -t $DOCKER_USER/myapp:$CIRCLE_SHA1 -t $DOCKER_USER/myapp:latest .
      # deploy the image
       - run: docker push $DOCKER_USER/myapp:$CIRCLE_SHA1
       - run: docker push $DOCKER_USER/myapp:latest
